implementa filtragem e ordenação de estabelecimentos