@@ -1,12 +1,13 @@
 package br.com.cumbuca.service.estabelecimento;
 
 import br.com.cumbuca.dto.Favorito.FavoritoResponseDTO;
+import br.com.cumbuca.dto.estabelecimento.EstabelecimentoFiltroRequestDTO;
 import br.com.cumbuca.dto.estabelecimento.EstabelecimentoRequestDTO;
 import br.com.cumbuca.dto.estabelecimento.EstabelecimentoResponseDTO;
 import br.com.cumbuca.model.Avaliacao;
 import br.com.cumbuca.model.Estabelecimento;
-import br.com.cumbuca.model.favorito.Favorito;
 import br.com.cumbuca.model.Usuario;
+import br.com.cumbuca.model.favorito.Favorito;
 import br.com.cumbuca.repository.AvaliacaoRepository;
 import br.com.cumbuca.repository.EstabelecimentoRepository;
 import br.com.cumbuca.repository.FavoritoRespository;
@@ -14,7 +15,9 @@ import br.com.cumbuca.service.usuario.UsuarioService;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 
+import java.util.Comparator;
 import java.util.List;
+import java.util.Map;
 import java.util.NoSuchElementException;
 import java.util.stream.Collectors;
 
@@ -45,19 +48,54 @@ public class EstabelecimentoServiceImpl implements EstabelecimentoService {
     }
 
     @Override
-    public List<EstabelecimentoResponseDTO> listar() {
-        usuarioService.verificaUsuarioLogado();
-        final List<Estabelecimento> estabelecimentos = estabelecimentoRepository.findAll();
+    public List<EstabelecimentoResponseDTO> listar(EstabelecimentoFiltroRequestDTO filtros, boolean ordenar) {
+        //usuarioService.verificaUsuarioLogado();
+        List<Estabelecimento> estabelecimentos = estabelecimentoRepository.findAll();
+
+        final Map<Long, List<Avaliacao>> avaliacoesMap = carregarAvaliacoes(estabelecimentos);
+
+        estabelecimentos = estabelecimentos.stream()
+                .filter(estabelecimento -> filtrarPorTexto(filtros.getNome(), estabelecimento.getNome()))
+                .filter(estabelecimento -> filtrarPorTexto(filtros.getCategoria(), estabelecimento.getCategoria()))
+                .filter(estabelecimento -> filtrarPorLocal(filtros.getLocal(), estabelecimento))
+                .filter(estabelecimento -> {
+                    final List<Avaliacao> avaliacoes = avaliacaoRepository.findByEstabelecimentoId(estabelecimento.getId());
+                    final double notaGeral = calculaNotaGeral(avaliacoes);
+                    return filtrarPorNota(filtros.getNotaGeral(), notaGeral);
+                }).toList();
+
+        if (ordenar) {
+            estabelecimentos = estabelecimentos.stream()
+                    .sorted(Comparator.comparingInt((Estabelecimento est) -> avaliacoesMap.get(est.getId()).size())
+                            .reversed())
+                    .toList();
+        }
 
         return estabelecimentos.stream().map(estabelecimento -> {
             final List<Avaliacao> avaliacoes = avaliacaoRepository.findByEstabelecimentoId(estabelecimento.getId());
-
             final EstabelecimentoResponseDTO estabelecimentoResponseDTO = new EstabelecimentoResponseDTO(estabelecimento);
             estabelecimentoResponseDTO.setQtdAvaliacoes(avaliacoes.size());
             estabelecimentoResponseDTO.setNotaGeral(calculaNotaGeral(avaliacoes));
-
             return estabelecimentoResponseDTO;
-        }).collect(Collectors.toList());
+        }).toList();
+    }
+
+    private Map<Long, List<Avaliacao>> carregarAvaliacoes(List<Estabelecimento> estabelecimentos) {
+        final Map<Long, List<Avaliacao>> avaliacoesMap = estabelecimentos.stream()
+                .collect(Collectors.toMap(
+                        Estabelecimento::getId,
+                        estabelecimento -> avaliacaoRepository.findByEstabelecimentoId(estabelecimento.getId())
+                ));
+
+        estabelecimentos = estabelecimentos.stream()
+                .filter(est -> !avaliacoesMap.get(est.getId()).isEmpty())
+                .toList();
+
+        if (estabelecimentos.isEmpty()) {
+            throw new NoSuchElementException("Estabelecimento não encontrado, pois não há avaliações");
+        }
+
+        return avaliacoesMap;
     }
 
     @Override
@@ -103,6 +141,25 @@ public class EstabelecimentoServiceImpl implements EstabelecimentoService {
         favoritoResponseDTO.setFavoritado(true);
         favoritoRespository.save(favorito);
         return favoritoResponseDTO;
+    }
+
+    private boolean filtrarPorTexto(String filtro, String valor) {
+        return filtro == null || filtro.isBlank() ||
+                (valor != null && valor.toLowerCase().contains(filtro.toLowerCase()));
+    }
+
+    private boolean filtrarPorNota(Double notaFiltro, Double nota) {
+        return notaFiltro == null || nota.equals(notaFiltro);
+    }
+
+    private boolean filtrarPorLocal(String filtro, Estabelecimento estabelecimento) {
+        if (filtro == null || filtro.isBlank()) {
+            return true;
+        }
+        return (estabelecimento.getRua() != null && estabelecimento.getRua().toLowerCase().contains(filtro.toLowerCase()) ||
+                estabelecimento.getBairro() != null && estabelecimento.getBairro().toLowerCase().contains(filtro.toLowerCase())) ||
+                (estabelecimento.getCidade() != null && estabelecimento.getCidade().toLowerCase().contains(filtro.toLowerCase())) ||
+                (estabelecimento.getEstado() != null && estabelecimento.getEstado().toLowerCase().contains(filtro.toLowerCase()));
     }
 
 }
